--- a/config.yaml
+++ b/config.yaml
@@ -1,36 +1,27 @@
 Global:
   session_base_path: "./SESSIONS"  # Base path where all session folders will be created
 
+
 Datasets:
   NLST:
-    # input_path: "/data" # "/data/data_st1.0_merged"
-    cases_uid: "/workspace/ctnorm/utils/nlst2mm_f.txt" # "/data/uids/cv_uids/ucla_test_uids_fold_3_merged-tmp.txt"
-    type: "dcm" # "h5"
+    uids: "/workspace/ctnorm/utils/csvs/nlst2mm_subset.csv" # "/data/uids/cv_uids/ucla_test_uids_fold_3_merged-tmp.txt"
+    in_dtype: "dcm" # "h5"
     description: "National Lung Screening Trial dataset"
   CustomDataset:
     input_path: "path/to/custom"
     description: "Custom dataset for validation"
 
+ 
 Modules:
   Characterization: false
   Harmonization: true
   Robustness: false
 
-Characterization:
-  input_datasets:
-    - TCIA
-    - NLST
-  features_to_extract:
-    - texture
-    - shape
-  metrics:
-    - histogramMeasure
-    - meatdataMeasure
 
 Harmonization:
   mode: "test"
   input_datasets:
-    - NLST
+    - name: NLST
   models:
     SNGAN: "./Harmonization/pretrained_weights/SNGAN/latestG-1-1.pth"
     # RRDB: "./Harmonization/pretrained_weights/RRDB/latestG-1-1.pth"
@@ -40,6 +31,6 @@ Harmonization:
     z_overlap: 4
     gpu_id: 1
     out_dtype: "dcm"
-  Metrics:
-    - sobelMap
-    - tSNE
+  metrics:
+    - sobel
+    - tsne
