--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@ Datasets:
 Modules:
   Characterization: true
   Harmonization: true
-  Robustness: false
+  Robustness: true
 
 Characterization:
   input_datasets:
@@ -21,8 +21,8 @@ Harmonization:
   input_datasets:
     - name: NLST
   models:
-    - name: WGAN
-      pretrained_G: "./pretrained_weights/WGAN/latestG-1-1.pth"
+    - name: SNGAN
+      pretrained_G: "./pretrained_weights/SNGAN/latestG-1-1.pth"
   param:
     tile_xy: 512
     tile_z: 32
@@ -30,6 +30,13 @@ Harmonization:
     gpu_id: 0
     out_dtype: "dcm"
 
-Characterization:
+Robustness:
   input_datasets:
-    - NLST
+    - name: NLST
+      in_uids: "./utils/csvs/nlst2mm_subset_with_label.csv"
+      variability:
+        name: "manufacturer" # convolution_kernel, slice_thickness
+        # load_from: "20250203-033504-40"
+  param:
+    model_type: "sybil_ensemble" # sybil_1, sybil_2, sybil_3, sybil_4, sybil_5 and sybil_ensemble
+    evaluate: false # label and time_to_event column needed for evaluation
