--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 Global:
-  session_base_path: "./SESSIONS_ST"
+  session_base_path: "./SESSIONS"
 
 Datasets:
   NLST:
@@ -20,18 +20,17 @@ Harmonization:
   mode: "test"
   input_datasets:
     - name: NLST
-      # in_uids: "path_to_nlst_subset.csv"
   models:
     - name: SNGAN
       pretrained_G: "./pretrained_weights/SNGAN/latestG-1-1.pth"
-    - name: WGAN
-      pretrained_G: "./pretrained_weights/WGAN/latestG-1-1.pth"
   param:
     tile_xy: 512
     tile_z: 32
     z_overlap: 4
     gpu_id: 0
-    out_dtype: "dcm"
+    out_dtype: ".dcm"
+  metrics:
+    - 'Sobel'
 
 Robustness:
   input_datasets:
@@ -39,6 +38,7 @@ Robustness:
       # in_uids: "path_to_nlst_subset.csv"
       variability:
         name: "manufacturer"
+        name: "slice_thickness" 
   param:
     model_type: "sybil_ensemble"
     evaluate: false
