--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 Global:
-  session_base_path: "./SESSIONS"
+  session_base_path: "./SESSIONS_ST"
 
 Datasets:
   NLST:
@@ -13,8 +13,8 @@ Datasets:
 
 Modules:
   Characterization: false
-  Harmonization: true
-  Robustness: false
+  Harmonization: false
+  Robustness: true
 
 Characterization:
   input_datasets:
@@ -40,10 +40,12 @@ Harmonization:
 Robustness:
   input_datasets:
     - name: NLST
-      # in_uids: "path_to_nlst_subset.csv"
+      in_uids: "./utils_tmp/csvs/nlst_input.csv"
       variability:
-        name: "manufacturer"
-        name: "slice_thickness" 
+        - manufacturer
+        - slice_thickness
+      load_from: "20250204-142207-4f"
+
   param:
     model_type: "sybil_ensemble"
     evaluate: false
