--- a/config.yaml
+++ b/config.yaml
@@ -1,37 +1,16 @@
 Global:
-  session_base_path: "./SESSIONS_Final"
+  session_base_path: "./SESSIONS"
 
 Datasets:
-  SPIE:
-    in_uids: "./utils_tmp/filtered_csv/spie_subsample.csv"
-    in_dtype: ".dcm"
-    description: "SPIE LungX"
-  UCLA-LDCT:
-    in_uids: "./utils_tmp/filtered_csv/ucla_ldct_subsample.csv"
-    in_dtype: ".dcm"
-    description: "UCLA-LDCT"
-  UCLA-CE:
-    in_uids: "./utils_tmp/filtered_csv/ucla_ce_subsample.csv"
-    in_dtype: ".dcm"
-    description: "UCLA-CE"
   NLST:
-    in_uids: "./utils_tmp/filtered_csv/nlst_subsample.csv"
+    in_uids: "/path_to_nlst_data.csv"
     in_dtype: ".dcm"
     description: "National Lung Screening Trial dataset"
 
-  # NLST:
-  #   in_uids: "./utils_tmp/csvs/nlst_input.csv"
-  #   in_dtype: ".dcm"
-  #   description: "National Lung Screening Trial dataset"
-  # UCLA CECT:
-  #   in_uids: "./utils_tmp/final_csvs_char/ucla_cect_subset.csv"
-  #   in_dtype: ".dcm"
-  #   description: "UCLA Contrast Enhanced dataset"
-
 Modules:
-  Characterization: false
+  Characterization: true
   Harmonization: true
-  Robustness: false
+  Robustness: true
 
 Characterization:
   input_datasets:
@@ -45,47 +24,36 @@ Characterization:
     clip_range : [-1024, 3071] # Standard HU range
     bins: 64
     kde_points: 1e3
-    kde_sample: 1e5 # Sample voxel to compute kde; If removed, computes kde for all voxel values - can be computationally expensive
+    kde_sample: 1e5
 
 Harmonization:
   mode: "test"
   input_datasets:
-    - name: SPIE
-    - name: UCLA-LDCT
-    - name: UCLA-CE
     - name: NLST
+    - in_uids: "/path_to_nlst_subset_data.csv"
   models:
-    - name: SRResNet
-      pretrained_G: "./pretrained_weights/SRResNet/latestG-1-1.pth"
     - name: SNGAN
       pretrained_G: "./pretrained_weights/SNGAN/latestG-1-1.pth"
-    - name: WGAN
-      pretrained_G: "./pretrained_weights/WGAN/latestG-1-1.pth"
-    - name: BM3D
   param:
     tile_xy: 512
     tile_z: 32
     z_overlap: 4
     gpu_id: 0
-    out_dtype: ".dcm"
+    out_dtype: ".nii.gz"
     save_lr: true
-  # metrics: # sobel, radiomic, snr
-  #   - snr
-  #   - sobel
+  metrics:
+    - snr
+    - sobel
+    - radiomic
 
 Robustness:
   input_datasets:
-    # - name: NLST
-    #   variability:
-    #     - manufacturer
-    #   load_from: "20250214-220226-4f"
-    #   in_uids: "./utils_tmp/csvs/nlst_input_subset.csv"
-
-    - name: UCLA CECT
+    - name: NLST
       variability:
+        - manufacturer
+        - slice_thickness
         - convolution_kernel
-      load_from: "20250214-220226-4f"
-      in_uids: "./utils_tmp/final_csvs_char/ucla_cect_subset.csv"
+      in_uids: "/path_to_nlst_subset_data.csv"
 
   param:
     model_type: "sybil_ensemble"
